--- a/AI_MUNJANG/CustomEmailView.xib
+++ b/AI_MUNJANG/CustomEmailView.xib
@@ -8,6 +8,14 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="NanumSquareOTF_acB.otf">
+            <string>NanumSquareOTF_acB</string>
+        </array>
+        <array key="NanumSquareOTF_acR.otf">
+            <string>NanumSquareOTF_acR</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomEmailView" customModule="AI_MUNJANG" customModuleProvider="target">
             <connections>
@@ -18,29 +26,49 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="XGY-Yu-6Cd">
-            <rect key="frame" x="0.0" y="0.0" width="364" height="104"/>
+            <rect key="frame" x="0.0" y="0.0" width="364" height="86"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJe-TH-8kr">
+                    <rect key="frame" x="4" y="0.0" width="340" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="iMc-Wb-4Ds"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="NanumSquareOTF_acB" family="NanumSquareOTF_ac" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aaw-PG-wd5" userLabel="container">
-                    <rect key="frame" x="0.0" y="0.0" width="364" height="73"/>
+                    <rect key="frame" x="0.0" y="21" width="364" height="31"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="플레이스 홀더" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="F6v-AB-GA3">
-                            <rect key="frame" x="4" y="4" width="356" height="65"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="예) munjang@gmail.com" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="F6v-AB-GA3">
+                            <rect key="frame" x="4" y="4" width="356" height="23"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CyL-dR-mlt" userLabel="border">
+                            <rect key="frame" x="4" y="27" width="356" height="1"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="T7g-Jm-wtA"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="F6v-AB-GA3" secondAttribute="bottom" constant="4" id="51I-AZ-KD6"/>
                         <constraint firstAttribute="trailing" secondItem="F6v-AB-GA3" secondAttribute="trailing" constant="4" id="DCC-Vg-45s"/>
                         <constraint firstItem="F6v-AB-GA3" firstAttribute="leading" secondItem="aaw-PG-wd5" secondAttribute="leading" constant="4" id="XYk-AU-bsv"/>
+                        <constraint firstItem="CyL-dR-mlt" firstAttribute="top" secondItem="F6v-AB-GA3" secondAttribute="bottom" id="bEr-b6-bnX"/>
                         <constraint firstItem="F6v-AB-GA3" firstAttribute="top" secondItem="aaw-PG-wd5" secondAttribute="top" constant="4" id="ded-Dq-6qY"/>
+                        <constraint firstItem="CyL-dR-mlt" firstAttribute="trailing" secondItem="F6v-AB-GA3" secondAttribute="trailing" id="kXk-n9-Rwo"/>
+                        <constraint firstItem="CyL-dR-mlt" firstAttribute="width" secondItem="F6v-AB-GA3" secondAttribute="width" id="lue-AL-eAb"/>
+                        <constraint firstItem="CyL-dR-mlt" firstAttribute="leading" secondItem="F6v-AB-GA3" secondAttribute="leading" id="u6z-rJ-MM7"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idr-0k-ZtE">
-                    <rect key="frame" x="16" y="81" width="348" height="23"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idr-0k-ZtE">
+                    <rect key="frame" x="4" y="52" width="360" height="34"/>
+                    <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -50,12 +78,15 @@
             <constraints>
                 <constraint firstItem="aaw-PG-wd5" firstAttribute="leading" secondItem="U7f-ZY-MQG" secondAttribute="leading" id="8PE-BZ-3Nx"/>
                 <constraint firstItem="U7f-ZY-MQG" firstAttribute="bottom" secondItem="Idr-0k-ZtE" secondAttribute="bottom" id="Mnm-dz-HJH"/>
-                <constraint firstItem="Idr-0k-ZtE" firstAttribute="top" secondItem="aaw-PG-wd5" secondAttribute="bottom" constant="8" id="a09-eJ-Xuy"/>
-                <constraint firstItem="Idr-0k-ZtE" firstAttribute="leading" secondItem="U7f-ZY-MQG" secondAttribute="leading" constant="16" id="c52-0T-ETs"/>
-                <constraint firstItem="aaw-PG-wd5" firstAttribute="height" secondItem="XGY-Yu-6Cd" secondAttribute="height" multiplier="0.7" id="gBF-yZ-a4G"/>
+                <constraint firstAttribute="trailing" secondItem="tJe-TH-8kr" secondAttribute="trailing" constant="20" id="Mp8-jT-av4"/>
+                <constraint firstItem="tJe-TH-8kr" firstAttribute="top" secondItem="XGY-Yu-6Cd" secondAttribute="top" id="SRN-89-6CH"/>
+                <constraint firstItem="aaw-PG-wd5" firstAttribute="top" secondItem="tJe-TH-8kr" secondAttribute="bottom" id="WaV-6W-H56"/>
+                <constraint firstItem="Idr-0k-ZtE" firstAttribute="top" secondItem="aaw-PG-wd5" secondAttribute="bottom" id="a09-eJ-Xuy"/>
+                <constraint firstItem="Idr-0k-ZtE" firstAttribute="leading" secondItem="U7f-ZY-MQG" secondAttribute="leading" constant="4" id="c52-0T-ETs"/>
+                <constraint firstItem="aaw-PG-wd5" firstAttribute="height" secondItem="XGY-Yu-6Cd" secondAttribute="height" multiplier="0.36" id="gBF-yZ-a4G"/>
                 <constraint firstItem="U7f-ZY-MQG" firstAttribute="trailing" secondItem="Idr-0k-ZtE" secondAttribute="trailing" id="i4z-wf-Wsg"/>
-                <constraint firstItem="aaw-PG-wd5" firstAttribute="top" secondItem="XGY-Yu-6Cd" secondAttribute="top" id="iPH-80-YTP"/>
                 <constraint firstItem="aaw-PG-wd5" firstAttribute="trailing" secondItem="U7f-ZY-MQG" secondAttribute="trailing" id="pl1-QR-inH"/>
+                <constraint firstItem="tJe-TH-8kr" firstAttribute="leading" secondItem="XGY-Yu-6Cd" secondAttribute="leading" constant="4" id="wNz-Cp-ymB"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-75.362318840579718" y="154.01785714285714"/>
