--- a/AI_MUNJANG/CustomPasswordView.xib
+++ b/AI_MUNJANG/CustomPasswordView.xib
@@ -8,39 +8,68 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="NanumSquareOTF_acB.otf">
+            <string>NanumSquareOTF_acB</string>
+        </array>
+        <array key="NanumSquareOTF_acR.otf">
+            <string>NanumSquareOTF_acR</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomPasswordView" customModule="AI_MUNJANG" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="Vro-4W-0gZ" id="jda-BM-blU"/>
-                <outlet property="label" destination="8bv-uE-BN5" id="nOo-1Q-VLE"/>
+                <outlet property="noticeLabel" destination="8bv-uE-BN5" id="gT4-fc-mtM"/>
                 <outlet property="textField" destination="EEm-fp-dPT" id="jEc-kL-mnk"/>
+                <outlet property="titleLabel" destination="mGy-Pw-0YC" id="IhJ-6j-t3T"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="eKU-6L-dBH">
-            <rect key="frame" x="0.0" y="0.0" width="364" height="104"/>
+            <rect key="frame" x="0.0" y="0.0" width="364" height="86"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGy-Pw-0YC">
+                    <rect key="frame" x="8" y="0.0" width="336" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="ctD-7i-uqm"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="NanumSquareOTF_acB" family="NanumSquareOTF_ac" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vro-4W-0gZ" userLabel="container">
-                    <rect key="frame" x="0.0" y="0.0" width="364" height="73"/>
+                    <rect key="frame" x="0.0" y="21" width="364" height="31"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="플레이스 홀더" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="EEm-fp-dPT">
-                            <rect key="frame" x="4" y="4" width="356" height="65"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호를 입력해주세요." minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="EEm-fp-dPT">
+                            <rect key="frame" x="4" y="4" width="356" height="23"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F7u-38-hs8" userLabel="border">
+                            <rect key="frame" x="4" y="26" width="356" height="1"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="lH1-gu-f9m"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
+                        <constraint firstItem="F7u-38-hs8" firstAttribute="bottom" secondItem="EEm-fp-dPT" secondAttribute="bottom" id="0WV-Iu-5Xy"/>
                         <constraint firstItem="EEm-fp-dPT" firstAttribute="top" secondItem="Vro-4W-0gZ" secondAttribute="top" constant="4" id="9CM-Ci-yYP"/>
+                        <constraint firstItem="F7u-38-hs8" firstAttribute="leading" secondItem="EEm-fp-dPT" secondAttribute="leading" id="Gbh-6t-TOY"/>
                         <constraint firstItem="EEm-fp-dPT" firstAttribute="leading" secondItem="Vro-4W-0gZ" secondAttribute="leading" constant="4" id="L79-3r-sbr"/>
                         <constraint firstAttribute="trailing" secondItem="EEm-fp-dPT" secondAttribute="trailing" constant="4" id="RS1-jj-RU8"/>
+                        <constraint firstItem="F7u-38-hs8" firstAttribute="width" secondItem="EEm-fp-dPT" secondAttribute="width" id="cAt-dg-19S"/>
+                        <constraint firstItem="F7u-38-hs8" firstAttribute="trailing" secondItem="EEm-fp-dPT" secondAttribute="trailing" id="lHm-Zy-uch"/>
                         <constraint firstAttribute="bottom" secondItem="EEm-fp-dPT" secondAttribute="bottom" constant="4" id="yKt-5q-M2J"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bv-uE-BN5">
-                    <rect key="frame" x="16" y="81" width="348" height="23"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bv-uE-BN5">
+                    <rect key="frame" x="8" y="52" width="356" height="34"/>
+                    <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -49,12 +78,15 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="Vro-4W-0gZ" firstAttribute="leading" secondItem="9Bc-2r-Md4" secondAttribute="leading" id="5w3-j2-tiW"/>
-                <constraint firstItem="Vro-4W-0gZ" firstAttribute="height" secondItem="eKU-6L-dBH" secondAttribute="height" multiplier="0.7" id="71k-qm-5hx"/>
-                <constraint firstItem="8bv-uE-BN5" firstAttribute="leading" secondItem="9Bc-2r-Md4" secondAttribute="leading" constant="16" id="8rC-2O-of5"/>
+                <constraint firstItem="Vro-4W-0gZ" firstAttribute="height" secondItem="eKU-6L-dBH" secondAttribute="height" multiplier="0.36" id="71k-qm-5hx"/>
+                <constraint firstItem="8bv-uE-BN5" firstAttribute="leading" secondItem="9Bc-2r-Md4" secondAttribute="leading" constant="8" id="8rC-2O-of5"/>
                 <constraint firstItem="9Bc-2r-Md4" firstAttribute="trailing" secondItem="8bv-uE-BN5" secondAttribute="trailing" id="9zf-Hy-O1R"/>
+                <constraint firstItem="Vro-4W-0gZ" firstAttribute="top" secondItem="mGy-Pw-0YC" secondAttribute="bottom" id="BRk-WB-K8M"/>
                 <constraint firstItem="9Bc-2r-Md4" firstAttribute="bottom" secondItem="8bv-uE-BN5" secondAttribute="bottom" id="R9w-O9-LBT"/>
-                <constraint firstItem="8bv-uE-BN5" firstAttribute="top" secondItem="Vro-4W-0gZ" secondAttribute="bottom" constant="8" id="gEn-uO-cme"/>
-                <constraint firstItem="Vro-4W-0gZ" firstAttribute="top" secondItem="eKU-6L-dBH" secondAttribute="top" id="hw5-pm-Tj6"/>
+                <constraint firstItem="mGy-Pw-0YC" firstAttribute="top" secondItem="eKU-6L-dBH" secondAttribute="top" id="T2T-7y-hqr"/>
+                <constraint firstItem="mGy-Pw-0YC" firstAttribute="leading" secondItem="eKU-6L-dBH" secondAttribute="leading" constant="8" id="emq-0T-zyy"/>
+                <constraint firstItem="8bv-uE-BN5" firstAttribute="top" secondItem="Vro-4W-0gZ" secondAttribute="bottom" id="gEn-uO-cme"/>
+                <constraint firstAttribute="trailing" secondItem="mGy-Pw-0YC" secondAttribute="trailing" constant="20" id="ikm-ez-sIr"/>
                 <constraint firstItem="Vro-4W-0gZ" firstAttribute="trailing" secondItem="9Bc-2r-Md4" secondAttribute="trailing" id="yzl-wZ-WSU"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
