--- a/AI_MUNJANG/CustomButtonView.xib
+++ b/AI_MUNJANG/CustomButtonView.xib
@@ -29,6 +29,9 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="18"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <connections>
+                        <action selector="clickedButton:" destination="-1" eventType="touchUpInside" id="cgP-jX-hg8"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="86A-UM-72S"/>
