--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -496,6 +496,145 @@
             </objects>
             <point key="canvasLocation" x="-649.27536231884062" y="-575.22321428571422"/>
         </scene>
+        <!--Custom Alert View Controller-->
+        <scene sceneID="1OT-oh-Idu">
+            <objects>
+                <viewController storyboardIdentifier="CustomAlertViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="Ro6-PK-gLi" customClass="CustomAlertViewController" customModule="AI_MUNJANG" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tlO-zw-LFu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bKJ-Ya-Img">
+                                <rect key="frame" x="69" y="277.5" width="276" height="341.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S04-zw-TMO">
+                                        <rect key="frame" x="0.0" y="0.0" width="276" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZVU-H7-bPq">
+                                                <rect key="frame" x="16" y="16" width="244" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="ZVU-H7-bPq" secondAttribute="trailing" constant="16" id="8TV-xP-PTm"/>
+                                            <constraint firstItem="ZVU-H7-bPq" firstAttribute="top" secondItem="S04-zw-TMO" secondAttribute="top" constant="16" id="QRj-SX-4dF"/>
+                                            <constraint firstAttribute="height" constant="50" id="Rh6-9Y-NJT"/>
+                                            <constraint firstAttribute="bottom" secondItem="ZVU-H7-bPq" secondAttribute="bottom" constant="16" id="Vmm-zA-n19"/>
+                                            <constraint firstItem="ZVU-H7-bPq" firstAttribute="leading" secondItem="S04-zw-TMO" secondAttribute="leading" constant="16" id="l0C-Ha-Cqn"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="코로나바이러스감염증-19가 유행하기 시작하면서 포털사이트에는 ‘음성 양성 뜻’이라는 검색어가 오르내렸다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rn-yI-7GB">
+                                        <rect key="frame" x="16" y="66" width="244" height="81.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="7Ak-6c-1GJ">
+                                        <rect key="frame" x="16" y="163.5" width="244" height="104"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3It-Vf-w23">
+                                                <rect key="frame" x="0.0" y="0.0" width="244" height="50"/>
+                                                <color key="backgroundColor" red="0.28907574949999998" green="0.35762649909999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="LIQ-xn-U54"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="첫번째 버튼">
+                                                    <color key="baseForegroundColor" red="0.93783161049999997" green="0.92655131950000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="didTapFirst:" destination="Ro6-PK-gLi" eventType="touchUpInside" id="09y-hv-NPL"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g9f-Yg-xf7">
+                                                <rect key="frame" x="0.0" y="54" width="244" height="50"/>
+                                                <color key="backgroundColor" red="1" green="0.16608126149999999" blue="0.5370564122" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="JMM-5D-6KE"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="두번째버튼">
+                                                    <color key="baseForegroundColor" red="0.93783161049999997" green="0.92655131950000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="didTapSecond:" destination="Ro6-PK-gLi" eventType="touchUpInside" id="kLf-v4-hgY"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Jc9-NG-Uff">
+                                        <rect key="frame" x="16" y="283.5" width="244" height="50"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDz-M7-r10">
+                                                <rect key="frame" x="0.0" y="0.0" width="114" height="50"/>
+                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="세번째 버튼">
+                                                    <color key="baseForegroundColor" red="0.93783161049999997" green="0.92655131950000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="didTapThird:" destination="Ro6-PK-gLi" eventType="touchUpInside" id="p4D-vf-UGf"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Awi-By-0p3">
+                                                <rect key="frame" x="130" y="0.0" width="114" height="50"/>
+                                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="네번째 버튼">
+                                                    <color key="baseForegroundColor" red="0.93783161049999997" green="0.92655131950000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="didTapFourth:" destination="Ro6-PK-gLi" eventType="touchUpInside" id="wiJ-AO-wMo"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Rka-wI-hFQ"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="7Ak-6c-1GJ" secondAttribute="trailing" constant="16" id="EC9-hm-4jy"/>
+                                    <constraint firstAttribute="trailing" secondItem="7rn-yI-7GB" secondAttribute="trailing" constant="16" id="Ifj-xC-7mi"/>
+                                    <constraint firstItem="7Ak-6c-1GJ" firstAttribute="leading" secondItem="bKJ-Ya-Img" secondAttribute="leading" constant="16" id="Ihj-wE-tdZ"/>
+                                    <constraint firstItem="Jc9-NG-Uff" firstAttribute="leading" secondItem="bKJ-Ya-Img" secondAttribute="leading" constant="16" id="Jrf-w3-98a"/>
+                                    <constraint firstAttribute="trailing" secondItem="Jc9-NG-Uff" secondAttribute="trailing" constant="16" id="Lg1-4m-7gk"/>
+                                    <constraint firstItem="7rn-yI-7GB" firstAttribute="leading" secondItem="bKJ-Ya-Img" secondAttribute="leading" constant="16" id="PQI-9b-74l"/>
+                                    <constraint firstAttribute="width" constant="276" id="VDJ-wW-gbU"/>
+                                    <constraint firstItem="S04-zw-TMO" firstAttribute="top" secondItem="bKJ-Ya-Img" secondAttribute="top" id="WOx-Tg-azW"/>
+                                    <constraint firstAttribute="bottom" secondItem="Jc9-NG-Uff" secondAttribute="bottom" constant="8" id="Xvv-rL-lsB"/>
+                                    <constraint firstItem="7rn-yI-7GB" firstAttribute="top" secondItem="S04-zw-TMO" secondAttribute="bottom" constant="16" id="YMa-pp-ES6"/>
+                                    <constraint firstItem="S04-zw-TMO" firstAttribute="leading" secondItem="bKJ-Ya-Img" secondAttribute="leading" id="epd-do-wot"/>
+                                    <constraint firstAttribute="trailing" secondItem="S04-zw-TMO" secondAttribute="trailing" id="fSN-gj-Lvu"/>
+                                    <constraint firstItem="Jc9-NG-Uff" firstAttribute="top" secondItem="7Ak-6c-1GJ" secondAttribute="bottom" constant="16" id="nVb-GP-V3P"/>
+                                    <constraint firstItem="7Ak-6c-1GJ" firstAttribute="top" secondItem="7rn-yI-7GB" secondAttribute="bottom" constant="16" id="uyw-wk-Xxq"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="x1r-2Z-Adb"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.35137762989999999" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="bKJ-Ya-Img" firstAttribute="centerX" secondItem="tlO-zw-LFu" secondAttribute="centerX" id="Gmb-v1-Vuc"/>
+                            <constraint firstItem="bKJ-Ya-Img" firstAttribute="centerY" secondItem="tlO-zw-LFu" secondAttribute="centerY" id="Wh6-LE-c26"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bodyLabel" destination="7rn-yI-7GB" id="1Vg-qI-Ju5"/>
+                        <outlet property="firstButton" destination="3It-Vf-w23" id="Sft-fj-EF5"/>
+                        <outlet property="fourthButton" destination="Awi-By-0p3" id="kDA-9i-u9C"/>
+                        <outlet property="secondButton" destination="g9f-Yg-xf7" id="WTR-Bz-kfa"/>
+                        <outlet property="thirdButton" destination="sDz-M7-r10" id="iYm-oY-d71"/>
+                        <outlet property="titleLabel" destination="ZVU-H7-bPq" id="nQ7-iM-0NB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N1k-Ab-TbJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1287" y="-1235"/>
+        </scene>
     </scenes>
     <resources>
         <image name="test.png" width="700" height="525"/>
@@ -508,6 +647,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
