--- a/AI_MUNJANG/CustomCheckBoxLabel.xib
+++ b/AI_MUNJANG/CustomCheckBoxLabel.xib
@@ -13,7 +13,7 @@
             <connections>
                 <outlet property="checkButton" destination="8go-pG-lnJ" id="3rn-aO-oCY"/>
                 <outlet property="checkButtonLabel" destination="lL5-sR-fm4" id="p8S-Ut-8GR"/>
-                <outlet property="checkButtonSubButton" destination="9ah-P9-ECe" id="fcY-5V-1fe"/>
+                <outlet property="checkSubButton" destination="9ah-P9-ECe" id="fcY-5V-1fe"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -58,7 +58,7 @@
                         <color key="baseForegroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </buttonConfiguration>
                     <connections>
-                        <action selector="clickedCheckButtonSubButton:" destination="-1" eventType="touchUpInside" id="uAI-hM-pP4"/>
+                        <action selector="clickedcheckSubButton:" destination="-1" eventType="touchUpInside" id="uAI-hM-pP4"/>
                     </connections>
                 </button>
             </subviews>
