--- a/AI_MUNJANG/CustomEmailView.xib
+++ b/AI_MUNJANG/CustomEmailView.xib
@@ -20,8 +20,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomEmailView" customModule="AI_MUNJANG" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="aaw-PG-wd5" id="ryf-yt-BU3"/>
-                <outlet property="label" destination="Idr-0k-ZtE" id="1py-tR-ZTm"/>
+                <outlet property="subLabel" destination="Idr-0k-ZtE" id="wmu-Lg-GM8"/>
                 <outlet property="textField" destination="F6v-AB-GA3" id="8Ro-aL-kgv"/>
+                <outlet property="titleLabel" destination="tJe-TH-8kr" id="sIh-wA-xqe"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
